<resources>
    <string name="app_name">SmartMoneyRecognition</string>
    <string name="smart_money_recognition">SMART MONEY RECOGNITION</string>
    <string name="pintar_mengenal_uang">Pintar Mengenal Uang</string>
    <string name="ini_contoh_aja">Ini contoh aja</string>
    <string name="cek_uang_di_sini">Cek uang di sini</string>
    <string name="warning_uang_palsu">Apabila terdapat uang palsu, segera hubungi pihak yang berwajib</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="headline">Headline</string>
    <string name="profil">Profil</string>
    <string name="kamera">KAMERA</string>
    <string name="profile">PROFILE</string>
    <string name="tahap_pertama">Tahap pertama:</string>
    <string name="lorem_ipsum_camera">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc hendrerit molestie tortor sed finibus. Duis lobortis porttitor massa vel tincidunt.</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="galeri">Galeri</string>
    <string name="berikutnya">Berikutnya</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="analisis">Analisis</string>
    <string name="tahap_kedua">Tahap Kedua:</string>
    <string name="tahap_ketiga">Tahap Ketiga:</string>
    <string name="headline_title">Hal yang dilakukan saat mendapatkan uang palsu</string>
    <string name="contact">Contact:</string>
    <string name="bicara">Bank Indonesia Call and Interaction :</string>
    <string name="_131">131</string>
    <string name="waspada_uang_palsu">WASPADAI UANG PALSU YANG BEREDAR</string>
    <string name="nama">Nama</string>
    <string name="example_nama">Ayu Kirana Vijayanti I</string>
    <string name="alamat">Alamat</string>
    <string name="example_alamat">Jln. Semarang no 25 Surabaya</string>
    <string name="no_telp">No. Telp</string>
    <string name="example_telp">08223242526</string>
    <string name="input_gambar">Input Gambar</string>
    <string name="alur_pelaporan">Alur Pelaporan</string>
    <string name="banner">Banner</string>
    <string name="ikon_kamera">Ikon Kamera</string>
    <string name="avatar_profil">Avatar Profil</string>
    <string name="gambar_contoh">Gambar Contoh</string>
    <string name="hasil_analisis">Hasil Analisis</string>
    <string name="button_back">Button Back</string>
    <string name="tv_jenis_uang_indonesia">Jenis - Jenis Uang yang Beredar \ndi Indonesia</string>
    <string name="tv_bagian_depan">Bagian Depan</string>
    <string name="tv_bagian_belakang">Bagian Belakang</string>
    <string name="tv_uang_rupiah">Uang Rp 100.000</string>
    <string name="jenis_jenis_mata_uang_di_dunia">Jenis-Jenis Mata Uang di Dunia</string>
    <string name="name_city">Indonesia</string>
    <string name="name_currency">Rupiah</string>
    <string name="short_currency">(IDR)</string>
    <string name="titik_dua">:</string>
    <string name="tv_hasil_analisis">Hasil Analisis :</string>
    <string name="text_detail">Detail :</string>
    <string name="text_tutorial">Tutorial</string>
    <string name="title_tutorial">Langkah - Langkah \nMenggunakan Aplikasi \nSMART MONEY RECOGNITION</string>
    <string name="title_anti_uang_palsu">Tips Anti Uang Palsu</string>
    <string name="tv_analisis_uang">UANG ASLI</string>
    <string name="tv_analisis_lagi">Analisis Lagi</string>
    <string name="gambar_uang">Gambar Uang</string>
    <string name="tv_dilihat">Dilihat</string>
    <string name="tv_diraba">Diraba</string>
    <string name="tv_diterawang">Diterawang</string>
    <string name="aboutUs">About Us</string>
    <string name="about_us">ABOUT US</string>
    <string name="title_mobile">Mobile Devs</string>
    <string name="id_fauzan">A2299F2579</string>
    <string name="title_ml">MLearning Devs</string>
    <string name="title_cloud">Cloud Devs</string>
    <string name="title_app">SMART MONEY RECOGNITION</string>
    <string name="group_id">C22-PS114</string>
    <string name="logo_splash">logo splash</string>
    <string name="fauzan_fiqriansyah">Fauzan Fiqriansyah</string>
    <string name="m_fikri_ulumuddin">M. Fikri Ulumuddin</string>
    <string name="nidya_putri_andini">Nidya Putri Andini</string>
    <string name="id_ayu">A2180G1746</string>
    <string name="id_fikri">M2180G1745</string>
    <string name="id_nidya">M7180G1747</string>
    <string name="ivander_achmad_w">Ivander Achmad . W</string>
    <string name="wilson_manuel">Wilson Manuel</string>
    <string name="id_ivan">C2008F0801</string>
    <string name="id_wilson">C7271F2356</string>
    <string name="logo_bangkit">logo bangkit</string>
</resources>