<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HeadlineFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bluish_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_regular"
            android:text="@string/headline"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="30dp"
            android:paddingEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headline_title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/bluish_cyan"
                android:fontFamily="@font/inter_regular" />

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/content_headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/ini_contoh_aja"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/flowchart"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/alur_pelaporan" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/contact"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/customborder"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/black"
                    android:text="@string/bicara"/>
                <TextView
                    android:id="@+id/tel_bicara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/sky_blue"
                    android:paddingStart="15dp"
                    android:text="@string/_131"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waspada_uang_palsu"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/red"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="@font/inter_regular"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>