<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfilFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bluish_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_regular"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:contentDescription="@string/avatar_profil" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:stretchColumns="1"
            android:shrinkColumns="1">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"
                    android:paddingTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_nama"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"
                    android:paddingTop="10dp"
                    android:minLines="2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_alamat"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"
                    android:minLines="2"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/no_telp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"
                    android:paddingTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_telp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_regular"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>

