<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvNameCity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/name_city"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titik_dua"/>
        <TextView
            android:id="@+id/tvCurrency"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_regular"
            android:textSize="14sp"
            android:text="@string/name_currency"/>
        <TextView
            android:id="@+id/tvShortCurrency"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/short_currency"
            android:fontFamily="@font/inter_regular"
            android:textStyle="bold"
            android:textColor="@color/bluish_cyan"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>