<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingTop="30dp"
    android:paddingEnd="20dp"
    tools:context=".fragments.camera_steps.CameraStep2">


    <LinearLayout
        android:id="@+id/step_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@drawable/customborder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tahap_kedua"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:text="@string/lorem_ipsum_camera"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/customborder"
        app:layout_constraintTop_toBottomOf="@id/step_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:src="@drawable/picture"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/input_gambar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/ambil_foto"
                android:backgroundTint="@color/bluish_cyan"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/galeri"
                android:backgroundTint="@color/bluish_cyan"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next_step_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berikutnya"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/bluish_cyan"
        app:layout_constraintTop_toBottomOf="@id/input_img"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sebelumnya"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/bluish_cyan"
        app:layout_constraintTop_toBottomOf="@id/input_img"
        app:layout_constraintEnd_toStartOf="@id/next_step_3"/>

</androidx.constraintlayout.widget.ConstraintLayout>