<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/bluish_cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/inter_regular"
            android:text="@string/smart_money_recognition"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/banner"
                android:contentDescription="@string/banner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/pintar_mengenal_uang"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTintMode="screen"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rv_item_horizontal" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cek_uang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customborder">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera"
                    android:adjustViewBounds="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/ikon_kamera" />

                <TextView
                    android:id="@+id/title_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/bluish_cyan"
                    android:text="@string/cek_uang_di_sini"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/bluish_cyan"
                    android:text="@string/warning_uang_palsu"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/title_camera"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>