<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvTitleRupiah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/tv_uang_rupiah"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/rvJenisUangIndonesia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvTitleRupiah"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/rvImageDepan"
                android:layout_width="170dp"
                android:layout_height="75dp"
                android:src="@drawable/front_seratus"
                android:contentDescription="@string/gambar_uang"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/tv_bagian_depan"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="11sp"/>

        </LinearLayout>

        <androidx.legacy.widget.Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/rvImageBelakang"
                android:layout_width="170dp"
                android:layout_height="75dp"
                android:src="@drawable/back_seratus"
                android:contentDescription="@string/gambar_uang"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="@string/tv_bagian_belakang"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="11sp"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>